--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,212 @@
-/* You can add global styles to this file, and also import other style files */
+/* based on angular-toastr css https://github.com/Foxandxss/angular-toastr/blob/cb508fe6801d6b288d3afc525bb40fee1b101650/dist/angular-toastr.css */
+
+/* position */
+.toast-center-center {
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+ }
+ .toast-top-center {
+   top: 0;
+   right: 0;
+   width: 100%;
+ }
+ .toast-bottom-center {
+   bottom: 0;
+   right: 0;
+   width: 100%;
+ }
+ .toast-top-full-width {
+   top: 0;
+   right: 0;
+   width: 100%;
+ }
+ .toast-bottom-full-width {
+   bottom: 0;
+   right: 0;
+   width: 100%;
+ }
+ .toast-top-left {
+   top: 12px;
+   left: 12px;
+ }
+ .toast-top-right {
+   top: 12px;
+   right: 12px;
+ }
+ .toast-bottom-right {
+   right: 12px;
+   bottom: 12px;
+ }
+ .toast-bottom-left {
+   bottom: 12px;
+   left: 12px;
+ }
+ 
+ /* toast styles */
+ .toast-title {
+   font-weight: bold;
+   font-size: .9rem;
+ }
+ .toast-message {
+   word-wrap: break-word;
+   font-size: .9rem;
+ }
+ .toast-message a,
+ .toast-message label {
+   color: #FFFFFF;
+ }
+ .toast-message a:hover {
+   color: #CCCCCC;
+   text-decoration: none;
+ }
+ .toast-close-button {
+   position: relative;
+   right: -0.3em;
+   top: -0.3em;
+   float: right;
+   font-size: 20px;
+   font-weight: bold;
+   color: #FFFFFF;
+   text-shadow: 0 1px 0 #ffffff;
+   /* opacity: 0.8; */
+ }
+ .toast-close-button:hover,
+ .toast-close-button:focus {
+   color: #000000;
+   text-decoration: none;
+   cursor: pointer;
+   opacity: 0.4;
+ }
+ /*Additional properties for button version
+  iOS requires the button element instead of an anchor tag.
+  If you want the anchor version, it requires `href="#"`.*/
+ button.toast-close-button {
+   padding: 0;
+   cursor: pointer;
+   background: transparent;
+   border: 0;
+ }
+ .toast-container {
+   pointer-events: none;
+   position: fixed;
+   z-index: 999999;
+ }
+ .toast-container * {
+   box-sizing: border-box;
+ }
+ .toast-container .ngx-toastr {
+   position: relative;
+   overflow: hidden;
+   margin: 0 0 6px;
+   padding: 6px 6px 6px 45px;
+   width: 220px;
+   border-radius: 7px;
+   background-position: 10px center;
+   background-repeat: no-repeat;
+   background-size: 24px;
+   /* box-shadow: 0 0 12px #999999; */
+   color: #FFFFFF;
+
+   
+ }
+ .toast-container .ngx-toastr:hover {
+   /* box-shadow: 0 0 12px #000000; */
+   opacity: 1;
+   cursor: pointer;
+ }
+ /* https://github.com/FortAwesome/Font-Awesome-Pro/blob/master/advanced-options/raw-svg/regular/info-circle.svg */
+ .toast-info {
+   background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23e8eaed'%3E%3Cpath d='M480-280q17 0 28.5-11.5T520-320v-160q0-17-11.5-28.5T480-520q-17 0-28.5 11.5T440-480v160q0 17 11.5 28.5T480-280Zm0-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z'/%3E%3C/svg%3E");
+ }
+ /* https://github.com/FortAwesome/Font-Awesome-Pro/blob/master/advanced-options/raw-svg/regular/times-circle.svg */
+ .toast-error {
+   background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23e8eaed'%3E%3Cpath d='m480-424 116 116q11 11 28 11t28-11q11-11 11-28t-11-28L536-480l116-116q11-11 11-28t-11-28q-11-11-28-11t-28 11L480-536 364-652q-11-11-28-11t-28 11q-11 11-11 28t11 28l116 116-116 116q-11 11-11 28t11 28q11 11 28 11t28-11l116-116Zm0 344q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z'/%3E%3C/svg%3E");
+ }
+ /* https://github.com/FortAwesome/Font-Awesome-Pro/blob/master/advanced-options/raw-svg/regular/check.svg */
+ .toast-success {
+   background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23e8eaed'%3E%3Cpath d='m424-408-86-86q-11-11-28-11t-28 11q-11 11-11 28t11 28l114 114q12 12 28 12t28-12l226-226q11-11 11-28t-11-28q-11-11-28-11t-28 11L424-408Zm56 328q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Z'/%3E%3C/svg%3E");
+ }
+ /* https://github.com/FortAwesome/Font-Awesome-Pro/blob/master/advanced-options/raw-svg/regular/exclamation-triangle.svg */
+ .toast-warning {
+   background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23e8eaed'%3E%3Cpath d='M109-120q-11 0-20-5.5T75-140q-5-9-5.5-19.5T75-180l370-640q6-10 15.5-15t19.5-5q10 0 19.5 5t15.5 15l370 640q6 10 5.5 20.5T885-140q-5 9-14 14.5t-20 5.5H109Zm371-120q17 0 28.5-11.5T520-280q0-17-11.5-28.5T480-320q-17 0-28.5 11.5T440-280q0 17 11.5 28.5T480-240Zm0-120q17 0 28.5-11.5T520-400v-120q0-17-11.5-28.5T480-560q-17 0-28.5 11.5T440-520v120q0 17 11.5 28.5T480-360Z'/%3E%3C/svg%3E");
+ }
+ .toast-container.toast-top-center .ngx-toastr,
+ .toast-container.toast-bottom-center .ngx-toastr {
+   width: 300px;
+   margin-left: auto;
+   margin-right: auto;
+ }
+ .toast-container.toast-top-full-width .ngx-toastr,
+ .toast-container.toast-bottom-full-width .ngx-toastr {
+   width: 96%;
+   margin-left: auto;
+   margin-right: auto;
+ }
+ .ngx-toastr {
+   background-color: #030303;
+   pointer-events: auto;
+ }
+ .toast-success {
+   background-color: #51A351;
+ }
+ .toast-error {
+   background-color: #ff7871;
+   opacity: .5;
+   
+ }
+ .toast-info {
+   background-color: #2F96B4;
+ }
+ .toast-warning {
+   background-color: #F89406;
+ }
+ .toast-progress {
+   position: absolute;
+   left: 0;
+   bottom: 0;
+   height: 4px;
+   background-color: #000000;
+   opacity: 0.4;
+ }
+ /* Responsive Design */
+ @media all and (max-width: 240px) {
+   .toast-container .ngx-toastr.div {
+     padding: 8px 8px 8px 50px;
+     width: 11em;
+   }
+   .toast-container .toast-close-button {
+     right: -0.2em;
+     top: -0.2em;
+   }
+ }
+ @media all and (min-width: 241px) and (max-width: 480px) {
+   .toast-container .ngx-toastr.div {
+     padding: 8px 8px 8px 50px;
+     width: 18em;
+   }
+   .toast-container .toast-close-button {
+     right: -0.2em;
+     top: -0.2em;
+   }
+ }
+ @media all and (min-width: 481px) and (max-width: 768px) {
+   .toast-container .ngx-toastr.div {
+     padding: 15px 15px 15px 50px;
+     width: 25em;
+   }
+ }
+
+
+
+
+ body{
+   background-color: rgb(228, 228, 228);
+   font-family: "Poppins", sans-serif;
+  font-style: normal;
+ }
+
+ *{
+   box-sizing: border-box;
+   margin: 0;
+ }
